# azReadAnalyzer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SETUP.md  eslint.config.js  index.html  mockup.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.playwright-mcp/: page-2026-06-09T04-49-49-284Z.yml  page-2026-06-09T04-50-08-227Z.yml  page-2026-06-10T03-03-14-177Z.yml
docs/archi/: screenshot-capture.md
docs/pmreview/: 2026-06-08-iteration-1-review.md  2026-06-08-iteration-2-review.md  2026-06-08-iteration-3-e2e-verification.md  2026-06-08-iteration-3-final-review.md
docs/superpowers/plans/: 2026-06-07-azreadanalyzer-implementation.md  2026-06-09-settings-panel-frost.md  2026-06-09-ui-round1-iter1-window-frost.md  2026-06-09-ui-round1-iter2-replay.md  2026-06-09-ui-round1-iter3-thumbnail.md  2026-06-10-settings-panel-frost.md  2026-06-11-streaming-tts.md  2026-06-13-playback-seek-record-stop.md  2026-06-13-read-markdown.md
docs/superpowers/specs/: 2026-06-07-azreadanalyzer-design.md  2026-06-08-azreadanalyzer-tierb-hardening.md  2026-06-09-settings-panel-frost-design.md  2026-06-09-ui-feedback-round1-design.md  2026-06-10-settings-panel-frost-design.md  2026-06-11-streaming-tts-design.md  2026-06-13-playback-seek-record-stop-design.md  (+1 more)
docs/thirdpartyreview/: 2026-06-07-azreadanalyzer-design-review.md  2026-06-08-plan-review.md  2026-06-09-ui-feedback-round1-design-review.md  2026-06-10-settings-panel-frost-design-review.md  2026-06-10-settings-panel-frost-plan-review.md  2026-06-11-streaming-tts-design-review.md  2026-06-11-streaming-tts-plan-review.md  2026-06-13-playback-seek-record-stop-design-review.md  2026-06-13-playback-seek-record-stop-plan-review.md  2026-06-13-read-markdown-design-review.md  2026-06-13-read-markdown-plan-review.md
ocr_service/: requirements.txt  server.py
src/: App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  clipboard.rs  commands.rs  diff.rs  events.rs  fluency.rs  lib.rs  llm.rs  markdown.rs  settings.rs  stt.rs
src/components/: CaptureControls.tsx  CaptureThumbnail.tsx  FeedbackPanel.tsx  Lightbox.tsx  PlaybackControls.tsx  ReadMarkdownPanel.tsx  RecordingPanel.tsx  SettingsPanel.tsx  TextInputPanel.tsx  Toasts.tsx
src/hooks/: useMockEvents.ts  useTauriEvents.ts
src/lib/: frost.test.ts  frost.ts  loadCaptureImage.ts  streamPlayer.test.ts  streamPlayer.ts
src/store/: useAppStore.ts
src/types/: index.ts
tts_service/: requirements.txt  server.py  test_stream.py
(+9 files in other folders)
