[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

# Audio
cpal = "0.16.0"
hound = "3"
# Anti-aliased resampling to 16kHz (Tier-B B3; same as MeetBuddy).
rubato = "0.16.2"

# Clipboard
arboard = "3"

# Diff
similar = "2"

# STT
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp"] }

# Unique temp files (screenshot PNG + recording WAV); auto-deleted on drop.
# In [dependencies] (not dev-only) because runtime code uses it.
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "whisper-metal"] }
